--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -20,6 +23,10 @@ ul, li {
 a {
 	color: orange;
 	text-decoration: none;
+}
+button {
+  background-color: orange;
+
 }
 a:hover, a:focus {
 	color: #3397db;
@@ -50,10 +57,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 /* ====================== Navigation ====================== */
 nav {
-  width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
+  display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
 }
 nav h1 {
   margin: auto;
@@ -71,7 +79,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -106,13 +113,14 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  background-color: #252831;
   align-items: center;
+      display: flex;
+    flex-wrap: wrap;
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  padding-top: 6px;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
@@ -136,23 +144,24 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -183,29 +192,15 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-}
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
+  height: 150px;
+  margin: 10px 0px;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 95.8%;
 }
 #restaurant-name {
   color: #f18200;
@@ -213,16 +208,22 @@ nav h1 a {
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin-bottom: : 10px;
   text-transform: uppercase;
   line-height: 1.1;
+  text-align: center;
 }
 #restaurant-img {
-	width: 90%;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60%;
 }
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+  text-align: center;
+  font-weight: bold;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -234,16 +235,15 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 10px 40px 30px 30px;
+  
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 10px 40px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -251,6 +251,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+      margin: 0px;
 }
 #reviews-list {
   margin: 0;
@@ -272,4 +273,22 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+@media screen and (min-width: 0px){
+#restaurants-list li {
+  max-width: 100%
+}
+.filter-options select{
+  justify-content: center;
+  }
+}
+@media screen and (min-width: 700px){
+#restaurants-list li {
+  max-width: 35%
+}
+}
+@media screen and (min-width: 1175px){
+#restaurants-list li {
+  max-width: 25%
+}
 }
